Working on panorama page

--- a/TCMSFRONTEND/TCMSFRONTEND.csproj
+++ b/TCMSFRONTEND/TCMSFRONTEND.csproj
@@ -40,9 +40,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Handlebars, Version=1.0.0.0, Culture=neutral, PublicKeyToken=22225d0bf33cd661, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Handlebars.Net\source\Handlebars\bin\Debug\Handlebars.dll</HintPath>
+    <Reference Include="Handlebars">
+      <HintPath>.\Handlebars.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -75,6 +74,185 @@
     <Content Include="packages.config" />
     <Content Include="Views\Assets\css\style.css" />
     <Content Include="Views\Assets\data\about.jpg" />
+    <Content Include="Views\Assets\data\panorama\Abyaneh.jpg" />
+    <Content Include="Views\Assets\data\panorama\Abyaneh.swf" />
+    <Content Include="Views\Assets\data\panorama\Ali Qapoo.jpg" />
+    <Content Include="Views\Assets\data\panorama\Ali Qapoo.swf" />
+    <Content Include="Views\Assets\data\panorama\Amir Chakhmaq Square.jpg" />
+    <Content Include="Views\Assets\data\panorama\Amir Chakhmaq Square.swf" />
+    <Content Include="Views\Assets\data\panorama\Aqa Bozorg Mosque and School.jpg" />
+    <Content Include="Views\Assets\data\panorama\Aqa Bozorg Mosque and School.swf" />
+    <Content Include="Views\Assets\data\panorama\Ardestan Jame%27 Mosque %282%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Ardestan Jame%27 Mosque %282%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Ardestan Jame%27 Mosque.jpg" />
+    <Content Include="Views\Assets\data\panorama\Ardestan Jame%27 Mosque.swf" />
+    <Content Include="Views\Assets\data\panorama\Arg-e Bam %28Bam Citadel%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Arg-e Bam %28Bam Citadel%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Arg-e Karim khan %28Karim Khan%27s Citadel%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Arg-e Karim khan %28Karim Khan%27s Citadel%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Arg-e Rayen %28Rayen Castle%29 %282%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Arg-e Rayen %28Rayen Castle%29 %282%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Arg-e Rayen %28Rayen Castle%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Arg-e Rayen %28Rayen Castle%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Arjantin Square.jpg" />
+    <Content Include="Views\Assets\data\panorama\Arjantin Square.swf" />
+    <Content Include="Views\Assets\data\panorama\Baq-e Sangi %28Stony Garden%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Baq-e Sangi %28Stony Garden%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Bath of Fin Garden.jpg" />
+    <Content Include="Views\Assets\data\panorama\Bath of Fin Garden.swf" />
+    <Content Include="Views\Assets\data\panorama\Bath of the Amerees%27 House.jpg" />
+    <Content Include="Views\Assets\data\panorama\Bath of the Amerees%27 House.swf" />
+    <Content Include="Views\Assets\data\panorama\Bisotun Inscription.jpg" />
+    <Content Include="Views\Assets\data\panorama\Bisotun Inscription.swf" />
+    <Content Include="Views\Assets\data\panorama\Boroojerdis%27 House.jpg" />
+    <Content Include="Views\Assets\data\panorama\Boroojerdis%27 House.swf" />
+    <Content Include="Views\Assets\data\panorama\Carpet Shop.jpg" />
+    <Content Include="Views\Assets\data\panorama\Carpet Shop.swf" />
+    <Content Include="Views\Assets\data\panorama\Chehel Sotun %28Forty Culumns%29 %282%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Chehel Sotun %28Forty Culumns%29 %282%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Chehel Sotun %28Forty Culumns%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Chehel Sotun %28Forty Culumns%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Cinema Mellat.jpg" />
+    <Content Include="Views\Assets\data\panorama\Cinema Mellat.swf" />
+    <Content Include="Views\Assets\data\panorama\Dolat Abad Garden.jpg" />
+    <Content Include="Views\Assets\data\panorama\Dolat Abad Garden.swf" />
+    <Content Include="Views\Assets\data\panorama\Eram Garden.jpg" />
+    <Content Include="Views\Assets\data\panorama\Eram Garden.swf" />
+    <Content Include="Views\Assets\data\panorama\Fahraj Jame%27 Mosque.jpg" />
+    <Content Include="Views\Assets\data\panorama\Fahraj Jame%27 Mosque.swf" />
+    <Content Include="Views\Assets\data\panorama\Fin garden.jpg" />
+    <Content Include="Views\Assets\data\panorama\Fin garden.swf" />
+    <Content Include="Views\Assets\data\panorama\Firooz Abad Sasanid Castle.jpg" />
+    <Content Include="Views\Assets\data\panorama\Firooz Abad Sasanid Castle.swf" />
+    <Content Include="Views\Assets\data\panorama\Ganj Ali Khan Bathhouse.jpg" />
+    <Content Include="Views\Assets\data\panorama\Ganj Ali Khan Bathhouse.swf" />
+    <Content Include="Views\Assets\data\panorama\Ganj Ali Khan Square.jpg" />
+    <Content Include="Views\Assets\data\panorama\Ganj Ali Khan Square.swf" />
+    <Content Include="Views\Assets\data\panorama\Ganj-Ali Khan Mosque.jpg" />
+    <Content Include="Views\Assets\data\panorama\Gonbad Jabaliyeh.jpg" />
+    <Content Include="Views\Assets\data\panorama\Gonbad Jabaliyeh.swf" />
+    <Content Include="Views\Assets\data\panorama\Harandi Garden.jpg" />
+    <Content Include="Views\Assets\data\panorama\Harandi Garden.swf" />
+    <Content Include="Views\Assets\data\panorama\Hasht Behesht.jpg" />
+    <Content Include="Views\Assets\data\panorama\Hasht Behesht.swf" />
+    <Content Include="Views\Assets\data\panorama\Heydarzadeh%27s House.jpg" />
+    <Content Include="Views\Assets\data\panorama\Heydarzadeh%27s House.swf" />
+    <Content Include="Views\Assets\data\panorama\Imam Mosque.jpg" />
+    <Content Include="Views\Assets\data\panorama\Imam Mosque.swf" />
+    <Content Include="Views\Assets\data\panorama\Islamieh Village %282%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Islamieh Village %282%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Islamieh Village.jpg" />
+    <Content Include="Views\Assets\data\panorama\Islamieh Village.swf" />
+    <Content Include="Views\Assets\data\panorama\Jahan Nama Garden.jpg" />
+    <Content Include="Views\Assets\data\panorama\Jahan Nama Garden.swf" />
+    <Content Include="Views\Assets\data\panorama\Jamaran Hosseinieh.jpg" />
+    <Content Include="Views\Assets\data\panorama\Jamaran Hosseinieh.swf" />
+    <Content Include="Views\Assets\data\panorama\Ka%27be-ye Zartosht %28Cube of Zoroaster%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Ka%27be-ye Zartosht %28Cube of Zoroaster%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Kabood Mosque.jpg" />
+    <Content Include="Views\Assets\data\panorama\Kabood Mosque.swf" />
+    <Content Include="Views\Assets\data\panorama\Kerman Jame%27 Mosque %282%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Kerman Jame%27 Mosque %282%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Kerman Jame%27 Mosque.jpg" />
+    <Content Include="Views\Assets\data\panorama\Kerman Jame%27 Mosque.swf" />
+    <Content Include="Views\Assets\data\panorama\Khosro Mosque.jpg" />
+    <Content Include="Views\Assets\data\panorama\Khosro Mosque.swf" />
+    <Content Include="Views\Assets\data\panorama\Kooh Gol Lake.jpg" />
+    <Content Include="Views\Assets\data\panorama\Kooh Gol Lake.swf" />
+    <Content Include="Views\Assets\data\panorama\Larees%27 House.jpg" />
+    <Content Include="Views\Assets\data\panorama\Larees’ House.jpg" />
+    <Content Include="Views\Assets\data\panorama\Margoon Waterfall.jpg" />
+    <Content Include="Views\Assets\data\panorama\Margoon Waterfall.swf" />
+    <Content Include="Views\Assets\data\panorama\Meybod.jpg" />
+    <Content Include="Views\Assets\data\panorama\Meybod.swf" />
+    <Content Include="Views\Assets\data\panorama\Milad Tower.jpg" />
+    <Content Include="Views\Assets\data\panorama\Milad Tower.swf" />
+    <Content Include="Views\Assets\data\panorama\Moavenol Molk Tekyeh.jpg" />
+    <Content Include="Views\Assets\data\panorama\Moavenol Molk Tekyeh.swf" />
+    <Content Include="Views\Assets\data\panorama\Money Museum.jpg" />
+    <Content Include="Views\Assets\data\panorama\Money Museum.swf" />
+    <Content Include="Views\Assets\data\panorama\Moshirol Mamalek Mosque.jpg" />
+    <Content Include="Views\Assets\data\panorama\Moshirol Mamalek Mosque.swf" />
+    <Content Include="Views\Assets\data\panorama\Na%27een Jame%27 Mosque %282%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Na%27een Jame%27 Mosque %282%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Na%27een Jame%27 Mosque.jpg" />
+    <Content Include="Views\Assets\data\panorama\Na%27een Jame%27 Mosque.swf" />
+    <Content Include="Views\Assets\data\panorama\Naghshe jahan Square.jpg" />
+    <Content Include="Views\Assets\data\panorama\Naghshe jahan Square.swf" />
+    <Content Include="Views\Assets\data\panorama\Naqsh-e Rajab.jpg" />
+    <Content Include="Views\Assets\data\panorama\Naqsh-e Rajab.swf" />
+    <Content Include="Views\Assets\data\panorama\Narin Qal%27eh %28Narin Castle%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Narin Qal%27eh %28Narin Castle%29.swf" />
+    <Content Include="Views\Assets\data\panorama\National Garden.jpg" />
+    <Content Include="Views\Assets\data\panorama\National Garden.swf" />
+    <Content Include="Views\Assets\data\panorama\Nobar Bathhouse.jpg" />
+    <Content Include="Views\Assets\data\panorama\Nobar Bathhouse.swf" />
+    <Content Include="Views\Assets\data\panorama\Old Alley.jpg" />
+    <Content Include="Views\Assets\data\panorama\Old Alley.swf" />
+    <Content Include="Views\Assets\data\panorama\Oljayto Sanctuary.jpg" />
+    <Content Include="Views\Assets\data\panorama\Oljayto Sanctuary.swf" />
+    <Content Include="Views\Assets\data\panorama\Pirnia house.jpg" />
+    <Content Include="Views\Assets\data\panorama\Pirnia house.swf" />
+    <Content Include="Views\Assets\data\panorama\Poets Mausoleum.jpg" />
+    <Content Include="Views\Assets\data\panorama\Poets Mausoleum.swf" />
+    <Content Include="Views\Assets\data\panorama\Qeisarieh Bazzar.jpg" />
+    <Content Include="Views\Assets\data\panorama\Qeisarieh Bazzar.swf" />
+    <Content Include="Views\Assets\data\panorama\Saint Stepanos Monastery.jpg" />
+    <Content Include="Views\Assets\data\panorama\Saint Stepanos Monastery.swf" />
+    <Content Include="Views\Assets\data\panorama\San%27at Square.jpg" />
+    <Content Include="Views\Assets\data\panorama\San%27at Square.swf" />
+    <Content Include="Views\Assets\data\panorama\Saraye Moshir.jpg" />
+    <Content Include="Views\Assets\data\panorama\Saraye Moshir.swf" />
+    <Content Include="Views\Assets\data\panorama\Sassanid Palace.jpg" />
+    <Content Include="Views\Assets\data\panorama\Sassanid Palace.swf" />
+    <Content Include="Views\Assets\data\panorama\Seyyed Rokneddin Tomb.jpg" />
+    <Content Include="Views\Assets\data\panorama\Seyyed Rokneddin Tomb.swf" />
+    <Content Include="Views\Assets\data\panorama\Shazdeh Garden.jpg" />
+    <Content Include="Views\Assets\data\panorama\Shazdeh Garden.swf" />
+    <Content Include="Views\Assets\data\panorama\Sheikh Lotfollah Mosque.jpg" />
+    <Content Include="Views\Assets\data\panorama\Sheikh Lotfollah Mosque.swf" />
+    <Content Include="Views\Assets\data\panorama\Sultan Amir Ahmad Bath.jpg" />
+    <Content Include="Views\Assets\data\panorama\Sultan Amir Ahmad Bath.swf" />
+    <Content Include="Views\Assets\data\panorama\Tabataba%27ees%27 House.jpg" />
+    <Content Include="Views\Assets\data\panorama\Tabataba%27ees%27 House.swf" />
+    <Content Include="Views\Assets\data\panorama\Takht-e Soleyman %282%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Takht-e Soleyman %282%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Takht-e Soleyman.jpg" />
+    <Content Include="Views\Assets\data\panorama\Takht-e Soleyman.swf" />
+    <Content Include="Views\Assets\data\panorama\Taq-e Bostan %28Bostan Arch%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Taq-e Bostan %28Bostan Arch%29.swf" />
+    <Content Include="Views\Assets\data\panorama\The Zagros Mountains.jpg" />
+    <Content Include="Views\Assets\data\panorama\The Zagros Mountains.swf" />
+    <Content Include="Views\Assets\data\panorama\Tomb of Ardeshir III.jpg" />
+    <Content Include="Views\Assets\data\panorama\Tomb of Ardeshir III.swf" />
+    <Content Include="Views\Assets\data\panorama\Tomb of Chalapi Oghli.jpg" />
+    <Content Include="Views\Assets\data\panorama\Tomb of Chalapi Oghli.swf" />
+    <Content Include="Views\Assets\data\panorama\Tomb of Hafez.jpg" />
+    <Content Include="Views\Assets\data\panorama\Tomb of Hafez.swf" />
+    <Content Include="Views\Assets\data\panorama\Tomb of Sa%27di %28Sa%27dieh%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Tomb of Sa%27di %28Sa%27dieh%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Tomb of Shah Ne%27matollah Vali.jpg" />
+    <Content Include="Views\Assets\data\panorama\Tomb of Shah Ne%27matollah Vali.swf" />
+    <Content Include="Views\Assets\data\panorama\Vakil Bathhouse.jpg" />
+    <Content Include="Views\Assets\data\panorama\Vakil Bathhouse.swf" />
+    <Content Include="Views\Assets\data\panorama\Vakil mosque.jpg" />
+    <Content Include="Views\Assets\data\panorama\Vakil mosque.swf" />
+    <Content Include="Views\Assets\data\panorama\Yakhdan-e Moayyedi %28Moayyedi Ice Pitt%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Yakhdan-e Moayyedi %28Moayyedi Ice Pitt%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Yazd Jame%27 Mosque %282%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Yazd Jame%27 Mosque %282%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Yazd Jame%27 Mosque.jpg" />
+    <Content Include="Views\Assets\data\panorama\Yazd Jame%27 Mosque.swf" />
+    <Content Include="Views\Assets\data\panorama\Zarabkhaneh Ganj-Ali Khan %28Ganj-Ali Mint%29.jpg" />
+    <Content Include="Views\Assets\data\panorama\Zarabkhaneh Ganj-Ali Khan %28Ganj-Ali Mint%29.swf" />
+    <Content Include="Views\Assets\data\panorama\Zavareh bazzar.jpg" />
+    <Content Include="Views\Assets\data\panorama\Zavareh bazzar.swf" />
+    <Content Include="Views\Assets\data\panorama\Zavareh Hosseinieh.jpg" />
+    <Content Include="Views\Assets\data\panorama\Zavareh Hosseinieh.swf" />
+    <Content Include="Views\Assets\data\panorama\Zein-Abad Village.jpg" />
+    <Content Include="Views\Assets\data\panorama\Zein-Abad Village.swf" />
+    <Content Include="Views\Assets\data\panorama\Zia%27iyeh School.jpg" />
+    <Content Include="Views\Assets\data\panorama\Zia%27iyeh School.swf" />
     <Content Include="Views\Assets\font\iran.svg" />
     <Content Include="Views\Assets\font\myriadset\MyriadSetPro-Text.svg" />
     <Content Include="Views\Assets\font\myriadset\MyriadSetPro-Thin.svg" />
@@ -196,7 +374,6 @@
     <Content Include="Views\Assets\less\project\typography.less" />
     <Content Include="Views\Assets\less\project\variables.less" />
     <Content Include="Views\Assets\less\style.less" />
-    <Content Include="Views\Assets\img\empty" />
     <None Include="Properties\PublishProfiles\101.3.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -246,6 +423,7 @@
     <Content Include="Views\Modules\Static\Banners.html" />
     <Content Include="Views\Modules\Static\Contact.html" />
     <Content Include="Views\Modules\Static\Copyright.html" />
+    <Content Include="Views\Modules\Static\Panorama.html" />
     <Content Include="Views\Modules\Static\Sharing.html" />
     <Content Include="Views\Pages\index.html" />
     <Content Include="Web.config" />
