--- a/TCMSFRONTEND/Views/Assets/prepros.cfg
+++ b/TCMSFRONTEND/Views/Assets/prepros.cfg
@@ -783,7 +783,8 @@
           "customOutput": false,
           "imported": true,
           "parents": [
-            "f4bead5f"
+            "f4bead5f",
+            "bb53beb9"
           ],
           "type": "less"
         },
@@ -3636,13 +3637,7 @@
               "comments": false,
               "preserve_line": false,
               "screw_ie8": false,
-              "preamble": null,
-              "indent_start": 0,
-              "indent_level": 4,
-              "width": 80,
-              "max_line_len": 32000,
-              "source_map": null,
-              "quote_style": 0
+              "preamble": null
             }
           }
         }
