--- a/TCMSFRONTEND/Web.config
+++ b/TCMSFRONTEND/Web.config
@@ -19,10 +19,10 @@
   </system.web>
   <system.webServer>
     <urlCompression doStaticCompression="true" doDynamicCompression="true"/>
-    <staticContent>
+    <!--<staticContent>
       <mimeMap fileExtension=".woff2" mimeType="application/font-woff2"/>
       <mimeMap fileExtension=".smil" mimeType="application/smil+xml"/>
-    </staticContent>
+    </staticContent>-->
   </system.webServer>
   <system.serviceModel>
     <behaviors>
