--- a/TCMSFRONTEND/Web.config
+++ b/TCMSFRONTEND/Web.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <add key="DbService" value="http://192.168.101.3:81/pl/frontend.svc/"/>
-    <add key="VideoBaseHost" value="http://192.99.219.222:82/presstv/iran/"/>
+    <add key="VideoBaseHost" value="http://178.32.255.194/ptv/iran/"/>
     <add key="ImageBaseHost" value="http://93.190.24.9:83/images/thumbnail/"/>
   </appSettings>
   <system.web>
