--- a/TCMSFRONTEND/Web.config
+++ b/TCMSFRONTEND/Web.config
@@ -19,10 +19,12 @@
   </system.web>
   <system.webServer>
     <urlCompression doStaticCompression="true" doDynamicCompression="true"/>
-    <!--<staticContent>
+    <staticContent>
+      <remove fileExtension=".woff2" />
+      <remove fileExtension=".smil" />
       <mimeMap fileExtension=".woff2" mimeType="application/font-woff2"/>
       <mimeMap fileExtension=".smil" mimeType="application/smil+xml"/>
-    </staticContent>-->
+    </staticContent>
   </system.webServer>
   <system.serviceModel>
     <behaviors>
